fix navbar on mobile

--- a/css/Interface.css
+++ b/css/Interface.css
@@ -19,10 +19,6 @@ body {
 	font-family: "Source Sans Pro", sans-serif !important;
 }
 .navbar {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
 	box-sizing: border-box;
 	transition: all 0.4s ease-out;
 	max-height: 150px;
@@ -46,7 +42,6 @@ canvas {
 	box-sizing: border-box;
 	left: 0px;
 	top: 150px;
-	width: 100%;
 	position: absolute;
 	box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.5);
 	float: left;
